...
                                                            </constraints>
                                                            <segments>
                                                                <segment title="" image="pieChart"/>
                                                                <segment title="" image="barChart"/>
                                                                <segment title="" image="horizontalBarChart"/>
                                                            </segments>
                                                            <color key="tintColor" red="0.0" green="0.54117647059999996" blue="0.6705882353" alpha="1" colorSpace="calibratedRGB"/>
...
                        <viewLayoutGuide key="safeArea" id="IXc-SS-MQ9"/>
                    </view>
                    <navigationItem key="navigationItem" title="Dashboard" id="dx0-rt-jwM">
                        <barButtonItem key="leftBarButtonItem" image="insights" id="EQc-8v-fJK">
                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                                        </constraints>
                                        <inset key="contentEdgeInsets" minX="8" minY="0.0" maxX="8" maxY="0.0"/>
                                        <state key="normal" image="back"/>
                                        <connections>
                                            <action selector="backTapped:" destination="vNZ-62-9Qs" eventType="touchUpInside" id="jBh-Lv-Kkg"/>
...
                                        <rect key="frame" x="354" y="4" width="42" height="36"/>
                                        <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="17"/>
                                        <state key="normal" title="Clear">
                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        </state>
...
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Start Time" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="qIz-Cn-4vX">
                                        <rect key="frame" x="82" y="69.5" width="250" height="44"/>
                                        <constraints>
...
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="End Time" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="6Pb-rV-XFN">
                                        <rect key="frame" x="82" y="177" width="250" height="44"/>
                                        <constraints>
...
                                            <segment title="1+"/>
                                            <segment title="2+"/>
                                            <segment title="3+"/>
                                            <segment title="4+"/>
                                            <segment title="5"/>
...
                                        </constraints>
                                        <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="17"/>
                                        <state key="normal" title="Complete">
                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        </state>
...
